--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUXE - Fashion Luxury Brand</title>
-    <link rel="stylesheet" href="Frontend/css/styles.css">
-    <link rel="stylesheet" href="Frontend/css/styles1.css">
-    <link rel="icon" type="image/x-icon" href="/Frontend/images/LUXE LOGO.png">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles1.css">
+    <link rel="icon" type="image/x-icon" href="images/LUXE LOGO.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -15,15 +15,15 @@
     <header class="container">
         <div class="header-content">
             <!-- Logo Structure for styling -->
-            <a href="Frontend/index.html" class="LOGO">LU<span class="LOGO1">XE</span><span class="LOGO2">.</span></a>
+            <a href="index.html" class="LOGO">LU<span class="LOGO1">XE</span><span class="LOGO2">.</span></a>
 
             <nav class="nav-desktop">
-                <a href="Frontend/index.html">HOME</a>
-                <a href="Frontend/pages/products.html">PRODUCTS</a>
-                <a href="Frontend/pages/categories.html">CATEGORIES</a>
-                <a href="Frontend/pages/about.html">ABOUT</a>
-                <a href="Frontend/pages/blog.html">BLOG</a>
-                <a href="Frontend/pages/contact.html">CONTACT</a>
+                <a href="index.html">HOME</a>
+                <a href="pages/products.html">PRODUCTS</a>
+                <a href="pages/categories.html">CATEGORIES</a>
+                <a href="pages/about.html">ABOUT</a>
+                <a href="pages/blog.html">BLOG</a>
+                <a href="pages/contact.html">CONTACT</a>
             </nav>
 
             <div class="button-icons">
@@ -52,12 +52,12 @@
             <button class="Close-Menu-Button" id="close-menu-button" aria-label="Close Menu">
                 <i class="fa fa-times"></i>
             </button>
-            <a href="Frontend/index.html">HOME</a>
-            <a href="Frontend/pages/products.html">PRODUCTS</a>
-            <a href="Frontend/pages/categories.html">CATEGORIES</a>
-            <a href="Frontend/pages/about.html">ABOUT</a>
-            <a href="Frontend/pages/blog.html">BLOG</a>
-            <a href="Frontend/pages/contact.html">CONTACT</a>
+            <a href="index.html">HOME</a>
+            <a href="pages/products.html">PRODUCTS</a>
+            <a href="pages/categories.html">CATEGORIES</a>
+            <a href="pages/about.html">ABOUT</a>
+            <a href="pages/blog.html">BLOG</a>
+            <a href="pages/contact.html">CONTACT</a>
         </div>
     </div>
 
@@ -77,12 +77,12 @@
 
             <div class="button-animation">
                 <button class="Button1" id="button1">
-                    <a href="Frontend/pages/products.html">
+                    <a href="pages/products.html">
                         <i class="fas fa-shopping-bag"></i> Shop Collection
                     </a>
                 </button>
                 <button class="Button2" id="button2">
-                    <a href="Frontend/pages/categories.html">
+                    <a href="pages/categories.html">
                         <i class="fas fa-th-large"></i> Browse Categories
                     </a>
                 </button>
@@ -125,7 +125,7 @@
                     <div class="card-content">
                         <h3>Footwear</h3>
                         <p>Luxury shoes for every occasion</p>
-                        <a href="Frontend/pages/products.html">Shop Now &rarr;</a>
+                        <a href="pages/products.html">Shop Now &rarr;</a>
                     </div>
                 </div>
 
@@ -136,7 +136,7 @@
                     <div class="card-content">
                         <h3>Bags</h3>
                         <p>Designer handbags and luxury leather goods</p>
-                        <a href="Frontend/pages/products.html">Shop Now &rarr;</a>
+                        <a href="pages/products.html">Shop Now &rarr;</a>
                     </div>
                 </div>
 
@@ -147,7 +147,7 @@
                     <div class="card-content">
                         <h3>Men's Fashion</h3>
                         <p>Sophisticated menswear collection</p>
-                        <a href="Frontend/pages/products.html">Shop Now &rarr;</a>
+                        <a href="pages/products.html">Shop Now &rarr;</a>
                     </div>
                 </div>
 
@@ -158,7 +158,7 @@
                     <div class="card-content">
                         <h3>Women's Fashion</h3>
                         <p>Elegant pieces for the modern woman</p>
-                        <a href="Frontend/pages/products.html">Shop Now &rarr;</a>
+                        <a href="pages/products.html">Shop Now &rarr;</a>
                     </div>
                 </div>
 
@@ -169,7 +169,7 @@
                     <div class="card-content">
                         <h3>Accessories</h3>
                         <p>Premium accessories to complete your look</p>
-                        <a href="Frontend/pages/products.html">Shop Now &rarr;</a>
+                        <a href="pages/products.html">Shop Now &rarr;</a>
                     </div>
                 </div>
 
@@ -180,7 +180,7 @@
                     <div class="card-content">
                         <h3>Jewelry</h3>
                         <p>Exquisite jewelry for special moments</p>
-                        <a href="Frontend/pages/products.html">Shop Now &rarr;</a>
+                        <a href="pages/products.html">Shop Now &rarr;</a>
                     </div>
                 </div>
             </div>
@@ -198,7 +198,7 @@
                     enjoy discounts on this week's selected fine fashion, made to 
                     improve your collection.
                 </p>
-                <a href="Frontend/pages/products.html" class="deal-button">
+                <a href="pages/products.html" class="deal-button">
                     <i class="fas fa-bolt"></i> Shop Now &rarr;
                 </a>
             </div>
@@ -378,7 +378,7 @@
 
             </div>
 
-            <a href="Frontend/pages/products.html" class="view-all-button">
+            <a href="pages/products.html" class="view-all-button">
                 <i class="fas fa-arrow-right"></i> VIEW ALL PRODUCTS
             </a>
         </div>
@@ -413,7 +413,7 @@
             <!-- Column 1: Logo and Description -->
             <div class="footer-column footer-logo-col">
                 <div class="footer-logo">
-                    <a href="Frontend/index.html" class="LOGO5">LU<span class="LOGO6">XE</span><span class="LOGO7">.</span></a>
+                    <a href="index.html" class="LOGO5">LU<span class="LOGO6">XE</span><span class="LOGO7">.</span></a>
                 </div>
                 <p class="footer-description">
                     Curated fashion for the modern wardrobe. Find quality pieces 
@@ -424,22 +424,22 @@
             <!-- Column 2: Shop Links -->
             <div class="footer-column footer-links">
                 <h4>Shop</h4>
-                <a href="Frontend/pages/products.html">All Products</a>
-                <a href="Frontend/pages/categories.html">Categories</a>
+                <a href="pages/products.html">All Products</a>
+                <a href="pages/categories.html">Categories</a>
             </div>
 
             <!-- Column 3: Account Links -->
             <div class="footer-column footer-links">
                 <h4>Account</h4>
-                <a href="Frontend/pages/orders.html">My Orders</a>
-                <a href="Frontend/pages/cart.html">Shopping Cart</a>
+                <a href="pages/orders.html">My Orders</a>
+                <a href="pages/cart.html">Shopping Cart</a>
             </div>
 
             <!-- Column 4: Support Links -->
             <div class="footer-column footer-links">
                 <h4>Support</h4>
                 <a href="#">My Account</a>
-                <a href="Frontend/pages/contact.html">Contact Us</a>
+                <a href="pages/contact.html">Contact Us</a>
                 <a href="#">FAQ</a>
             </div>
 
@@ -460,8 +460,8 @@
         </div>
     </footer>
 
-    <script src="/Frontend/js/script.js"></script>
-    <script src="/Frontend/js/config.js"></script> 
-    <script src="/Frontend/js/script1.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/config.js"></script> 
+    <script src="js/script1.js"></script>
 </body>
 </html>
