--- a/Frontend/pages/about.html
+++ b/Frontend/pages/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUXE. About Us</title>
-    <link rel="stylesheet" href="/Frontend/css/styles.css">
-    <link rel="stylesheet" href="/Frontend/css/styles3.css">
-    <link rel="icon" type="image/x-icon" href="/Frontend/images/LUXE LOGO.png">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles3.css">
+    <link rel="icon" type="image/x-icon" href="../images/LUXE LOGO.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -16,15 +16,15 @@
     <header class="container">
         <div class="header-content">
             <!-- Logo Structure for styling -->
-            <a href="/Frontend/index.html" class="LOGO">LU<span class="LOGO1">XE</span><span class="LOGO2">.</span></a>
+            <a href="../index.html" class="LOGO">LU<span class="LOGO1">XE</span><span class="LOGO2">.</span></a>
 
             <nav class="nav-desktop">
-                <a href="/Frontend/index.html">HOME</a>
-                <a href="/Frontend/pages/products.html">PRODUCTS</a>
-                <a href="/Frontend/pages/categories.html">CATEGORIES</a>
-                <a href="/Frontend/pages/about.html">ABOUT</a>
-                <a href="/Frontend/pages/blog.html">BLOG</a>
-                <a href="/Frontend/pages/contact.html">CONTACT</a>
+                <a href="../index.html">HOME</a>
+                <a href="../pages/products.html">PRODUCTS</a>
+                <a href="../pages/categories.html">CATEGORIES</a>
+                <a href="../pages/about.html">ABOUT</a>
+                <a href="../pages/blog.html">BLOG</a>
+                <a href="../pages/contact.html">CONTACT</a>
             </nav>
 
             <div class="button-icons">
@@ -53,12 +53,12 @@
             <button class="Close-Menu-Button" id="close-menu-button" aria-expanded="false" aria-controls="menu-button">
                 <i class="fa fa-bars"></i>
             </button>
-                <a href="/Frontend/index.html">HOME</a>
-                <a href="/Frontend/pages/products.html">PRODUCTS</a>
-                <a href="/Frontend/pages/categories.html">CATEGORIES</a>
-                <a href="/Frontend/pages/about.html">ABOUT</a>
-                <a href="/Frontend/pages/blog.html">BLOG</a>
-                <a href="/Frontend/pages/contact.html">CONTACT</a>
+                <a href="../index.html">HOME</a>
+                <a href="../pages/products.html">PRODUCTS</a>
+                <a href="../pages/categories.html">CATEGORIES</a>
+                <a href="../pages/about.html">ABOUT</a>
+                <a href="../pages/blog.html">BLOG</a>
+                <a href="../pages/contact.html">CONTACT</a>
         </div>
     </div>
 
@@ -194,7 +194,7 @@
         <div class="cta-container">
             <h2 class="animate-on-load animate-delay-0">Join Our Journey</h2>
             <p class="animate-on-load animate-delay-1">Experience the LUXE difference and discover why our customers trust us for their luxury fashion needs.</p>
-            <a href="/Frontend/pages/products.html" class="btn-primary animate-on-load animate-delay-2">Explore Collection</a>
+            <a href="../pages/products.html" class="btn-primary animate-on-load animate-delay-2">Explore Collection</a>
         </div>
     </section>
 
@@ -205,7 +205,7 @@
             <!-- column number 1 logo and description -->
             <div class="footer-column footer-logo-col">
                 <div class="footer-logo">
-                    <a href="/Frontend/index.html" class="LOGO5">LU<span class="LOGO6">XE</span><span class="LOGO7">.</span></a>
+                    <a href="../index.html" class="LOGO5">LU<span class="LOGO6">XE</span><span class="LOGO7">.</span></a>
                 </div>
                 <p class="footer-description">
                     Curated fashion for the modern wardrobe. Find quality pieces 
@@ -216,22 +216,22 @@
             <!-- column number two shop links -->
             <div class="footer-column footer-links">
                 <h4>Shop</h4>
-                <a href="/Frontend/pages/products.html">All Products</a>
-                <a href="/Frontend/pages/categories.html">Categories</a>
+                <a href="../pages/products.html">All Products</a>
+                <a href="../pages/categories.html">Categories</a>
             </div>
 
             <!-- column number three account links -->
             <div class="footer-column footer-links">
                 <h4>Account</h4>
-                <a href="/Frontend/pages/orders.html">My Orders</a>
-                <a href="/Frontend/pages/cart.html">Shopping Cart</a>
+                <a href="../pages/orders.html">My Orders</a>
+                <a href="../pages/cart.html">Shopping Cart</a>
             </div>
 
             <!-- column number four support links -->
             <div class="footer-column footer-links">
                 <h4>Support</h4>
                 <a href="#">My Account</a>
-                <a href="/Frontend/pages/contact.html">Contact Us</a>
+                <a href="../pages/contact.html">Contact Us</a>
                 <a href="#">FAQ</a>
             </div>
 
@@ -252,7 +252,7 @@
         </div>
      </footer>
 
-    <script src="/Frontend/js/script.js"></script>
-    <script src="/Frontend/js/script3.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/script3.js"></script>
 </body>
 </html>
