--- a/Frontend/pages/cart.html
+++ b/Frontend/pages/cart.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUXE - Shopping Cart</title>
-    <link rel="stylesheet" href="/Frontend/css/styles.css">
-    <link rel="stylesheet" href="/Frontend/css/styles7.css">
-    <link rel="icon" type="image/x-icon" href="/Frontend/images/LUXE LOGO.png">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles7.css">
+    <link rel="icon" type="image/x-icon" href="../images/LUXE LOGO.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -14,14 +14,14 @@
     <!-- Header -->
     <header class="container">
         <div class="header-content">
-            <a href="/Frontend/index.html" class="LOGO">LU<span class="LOGO1">XE</span><span class="LOGO2">.</span></a>
+            <a href="../index.html" class="LOGO">LU<span class="LOGO1">XE</span><span class="LOGO2">.</span></a>
             <nav class="nav-desktop">
-                <a href="/Frontend/index.html">HOME</a>
-                <a href="/Frontend/pages/products.html">PRODUCTS</a>
-                <a href="/Frontend/pages/categories.html">CATEGORIES</a>
-                <a href="/Frontend/pages/about.html">ABOUT</a>
-                <a href="/Frontend/pages/blog.html">BLOG</a>
-                <a href="/Frontend/pages/contact.html">CONTACT</a>
+                <a href="../index.html">HOME</a>
+                <a href="../pages/products.html">PRODUCTS</a>
+                <a href="../pages/categories.html">CATEGORIES</a>
+                <a href="../pages/about.html">ABOUT</a>
+                <a href="../pages/blog.html">BLOG</a>
+                <a href="../pages/contact.html">CONTACT</a>
             </nav>
             <div class="button-icons">
                 <button class="Search-Button" onclick="handleSearchClick()"><i class="fas fa-search"></i></button>
@@ -36,12 +36,12 @@
     <div id="menu-mobile" class="Menu-Mobile">
         <div class="menu-content">
             <button class="Close-Menu-Button" id="close-menu-button"><i class="fa fa-times"></i></button>
-            <a href="/Frontend/index.html">HOME</a>
-            <a href="/Frontend/pages/products.html">PRODUCTS</a>
-            <a href="/Frontend/pages/categories.html">CATEGORIES</a>
-            <a href="/Frontend/pages/about.html">ABOUT</a>
-            <a href="/Frontend/pages/blog.html">BLOG</a>
-            <a href="/Frontend/pages/contact.html">CONTACT</a>
+            <a href="../index.html">HOME</a>
+            <a href="../pages/products.html">PRODUCTS</a>
+            <a href="../pages/categories.html">CATEGORIES</a>
+            <a href="../pages/about.html">ABOUT</a>
+            <a href="../pages/blog.html">BLOG</a>
+            <a href="../pages/contact.html">CONTACT</a>
         </div>
     </div>
 
@@ -61,7 +61,7 @@
                 <i class="fas fa-shopping-basket"></i>
                 <h2>Your Cart is Empty</h2>
                 <p>Discover our luxurious collections now!</p>
-                <a href="/Frontend/pages/products.html" class="shop-now-btn">
+                <a href="../pages/products.html" class="shop-now-btn">
                     <i class="fas fa-shopping-bag"></i> Start Shopping
                 </a>
             </section>
@@ -77,7 +77,7 @@
             <!-- Column 1: Logo and Description -->
             <div class="footer-column footer-logo-col">
                 <div class="footer-logo">
-                    <a href="/Frontend/index.html" class="LOGO5">LU<span class="LOGO6">XE</span><span class="LOGO7">.</span></a>
+                    <a href="../index.html" class="LOGO5">LU<span class="LOGO6">XE</span><span class="LOGO7">.</span></a>
                 </div>
                 <p class="footer-description">
                     Curated fashion for the modern wardrobe. Find quality pieces 
@@ -88,22 +88,22 @@
             <!-- Column 2: Shop Links -->
             <div class="footer-column footer-links">
                 <h4>Shop</h4>
-                <a href="/Frontend/pages/products.html">All Products</a>
-                <a href="/Frontend/pages/categories.html">Categories</a>
+                <a href="../pages/products.html">All Products</a>
+                <a href="../pages/categories.html">Categories</a>
             </div>
 
             <!-- Column 3: Account Links -->
             <div class="footer-column footer-links">
                 <h4>Account</h4>
-                <a href="/Frontend/pages/orders.html">My Orders</a>
-                <a href="/Frontend/pages/cart.html">Shopping Cart</a>
+                <a href="../pages/orders.html">My Orders</a>
+                <a href="../pages/cart.html">Shopping Cart</a>
             </div>
 
             <!-- Column 4: Support Links -->
             <div class="footer-column footer-links">
                 <h4>Support</h4>
                 <a href="#">My Account</a>
-                <a href="/Frontend/pages/contact.html">Contact Us</a>
+                <a href="../pages/contact.html">Contact Us</a>
                 <a href="#">FAQ</a>
             </div>
 
@@ -125,8 +125,8 @@
     </footer>
 
     <!-- CORRECT SCRIPT ORDER -->
-    <script src="/Frontend/js/config.js"></script> 
-    <script src="/Frontend/js/script.js"></script>
-    <script src="/Frontend/js/script7.js"></script>
+    <script src="../js/config.js"></script> 
+    <script src="../js/script.js"></script>
+    <script src="../js/script7.js"></script>
 </body>
 </html>
