--- a/Frontend/pages/login.html
+++ b/Frontend/pages/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUXE - Login/Signup</title>
-    <link rel="stylesheet" href="/Frontend/css/styles.css">
-    <link rel="stylesheet" href="/Frontend/css/styles6.css">
-    <link rel="icon" type="image/x-icon" href="/Frontend/images/LUXE LOGO.png">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles6.css">
+    <link rel="icon" type="image/x-icon" href="../images/LUXE LOGO.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
@@ -18,7 +18,7 @@
     <div class="form-container-wrap">
 
         <div class="logo-center">
-            <a href="/Frontend/index.html" class="LOGO">LU<span class="LOGO1">XE</span><span class="LOGO2">.</span></a>
+            <a href="../index.html" class="LOGO">LU<span class="LOGO1">XE</span><span class="LOGO2">.</span></a>
         </div>
 
         <h1 id="main-auth-title" class="auth-main-title">LOGIN FORM</h1>
@@ -89,9 +89,9 @@
     </div>
 
     <!-- Load Config First -->
-    <script src="/Frontend/js/config.js"></script>
+    <script src="../js/config.js"></script>
     <!-- Then Load Main Script -->
-    <script src="/Frontend/js/script6.js"></script>
+    <script src="../js/script6.js"></script>
 
 </body>
 </html>
