--- a/Frontend/pages/admin.html
+++ b/Frontend/pages/admin.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUXE - Admin Panel</title>
-    <link rel="stylesheet" href="/Frontend/css/styles.css">
-    <link rel="stylesheet" href="/Frontend/css/styles-admin.css">
-    <link rel="icon" type="image/x-icon" href="/Frontend/images/LUXE LOGO.png">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles-admin.css">
+    <link rel="icon" type="image/x-icon" href="../images/LUXE LOGO.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -15,15 +15,15 @@
     <!-- Header/Navigation Section -->
     <header class="container">
         <div class="header-content">
-            <a href="/Frontend/index.html" class="LOGO">LU<span class="LOGO1">XE</span><span class="LOGO2">.</span></a>
+            <a href="../index.html" class="LOGO">LU<span class="LOGO1">XE</span><span class="LOGO2">.</span></a>
 
             <nav class="nav-desktop">
-                <a href="/Frontend/index.html">HOME</a>
-                <a href="/Frontend/pages/products.html">PRODUCTS</a>
-                <a href="/Frontend/pages/categories.html">CATEGORIES</a>
-                <a href="/Frontend/pages/about.html">ABOUT</a>
-                <a href="/Frontend/pages/blog.html">BLOG</a>
-                <a href="/Frontend/pages/contact.html">CONTACT</a>
+                <a href="../index.html">HOME</a>
+                <a href="../pages/products.html">PRODUCTS</a>
+                <a href="../pages/categories.html">CATEGORIES</a>
+                <a href="../pages/about.html">ABOUT</a>
+                <a href="../pages/blog.html">BLOG</a>
+                <a href="../pages/contact.html">CONTACT</a>
             </nav>
 
             <div class="button-icons">
@@ -52,12 +52,12 @@
             <button class="Close-Menu-Button" id="close-menu-button">
                 <i class="fa fa-bars"></i>
             </button>
-            <a href="/Frontend/index.html">HOME</a>
-            <a href="/Frontend/pages/products.html">PRODUCTS</a>
-            <a href="/Frontend/pages/categories.html">CATEGORIES</a>
-            <a href="/Frontend/pages/about.html">ABOUT</a>
-            <a href="/Frontend/pages/blog.html">BLOG</a>
-            <a href="/Frontend/pages/contact.html">CONTACT</a>
+            <a href="../index.html">HOME</a>
+            <a href="../pages/products.html">PRODUCTS</a>
+            <a href="../pages/categories.html">CATEGORIES</a>
+            <a href="../pages/about.html">ABOUT</a>
+            <a href="../pages/blog.html">BLOG</a>
+            <a href="../pages/contact.html">CONTACT</a>
         </div>
     </div>
 
@@ -414,7 +414,7 @@
         <div class="footer-content">
             <div class="footer-column footer-logo-col">
                 <div class="footer-logo">
-                    <a href="/Frontend/index.html" class="LOGO5">LU<span class="LOGO6">XE</span><span class="LOGO7">.</span></a>
+                    <a href="../index.html" class="LOGO5">LU<span class="LOGO6">XE</span><span class="LOGO7">.</span></a>
                 </div>
                 <p class="footer-description">
                     Curated fashion for the modern wardrobe. Find quality pieces 
@@ -424,20 +424,20 @@
 
             <div class="footer-column footer-links">
                 <h4>Shop</h4>
-                <a href="/Frontend/pages/products.html">All Products</a>
-                <a href="/Frontend/pages/categories.html">Categories</a>
+                <a href="../pages/products.html">All Products</a>
+                <a href="../pages/categories.html">Categories</a>
             </div>
 
             <div class="footer-column footer-links">
                 <h4>Account</h4>
-                <a href="/Frontend/pages/orders.html">My Orders</a>
-                <a href="/Frontend/pages/cart.html">Shopping Cart</a>
+                <a href="../pages/orders.html">My Orders</a>
+                <a href="../pages/cart.html">Shopping Cart</a>
             </div>
 
             <div class="footer-column footer-links">
                 <h4>Support</h4>
                 <a href="#">My Account</a>
-                <a href="/Frontend/pages/contact.html">Contact Us</a>
+                <a href="../pages/contact.html">Contact Us</a>
                 <a href="#">FAQ</a>
             </div>
 
@@ -456,8 +456,8 @@
         </div>
     </footer>
 
-    <script src="/Frontend/js/script.js"></script>
-    <script src="/Frontend/js/config.js"></script>
-    <script src="/Frontend/js/script-admin.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/config.js"></script>
+    <script src="../js/script-admin.js"></script>
 </body>
 </html>
