--- a/Frontend/pages/categories.html
+++ b/Frontend/pages/categories.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUXE. Browse Categories</title>
-    <link rel="stylesheet" href="/Frontend/css/styles.css">
-    <link rel="stylesheet" href="/Frontend/css/styles2.css">
-    <link rel="icon" type="image/x-icon" href="/Frontend/images/LUXE LOGO.png">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles2.css">
+    <link rel="icon" type="image/x-icon" href="../images/LUXE LOGO.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -16,15 +16,15 @@
     <header class="container">
         <div class="header-content">
             <!-- Logo Structure for styling -->
-            <a href="/Frontend/index.html" class="LOGO">LU<span class="LOGO1">XE</span><span class="LOGO2">.</span></a>
+            <a href="../index.html" class="LOGO">LU<span class="LOGO1">XE</span><span class="LOGO2">.</span></a>
 
             <nav class="nav-desktop">
-                <a href="/Frontend/index.html">HOME</a>
-                <a href="/Frontend/pages/products.html">PRODUCTS</a>
-                <a href="/Frontend/pages/categories.html">CATEGORIES</a>
-                <a href="/Frontend/pages/about.html">ABOUT</a>
-                <a href="/Frontend/pages/blog.html">BLOG</a>
-                <a href="/Frontend/pages/contact.html">CONTACT</a>
+                <a href="../index.html">HOME</a>
+                <a href="../pages/products.html">PRODUCTS</a>
+                <a href="../pages/categories.html">CATEGORIES</a>
+                <a href="../pages/about.html">ABOUT</a>
+                <a href="../pages/blog.html">BLOG</a>
+                <a href="../pages/contact.html">CONTACT</a>
             </nav>
 
             <div class="button-icons">
@@ -53,12 +53,12 @@
             <button class="Close-Menu-Button" id="close-menu-button" aria-expanded="false" aria-controls="menu-button">
                 <i class="fa fa-bars"></i>
             </button>
-                <a href="/Frontend/index.html">HOME</a>
-                <a href="/Frontend/pages/products.html">PRODUCTS</a>
-                <a href="/Frontend/pages/categories.html">CATEGORIES</a>
-                <a href="/Frontend/pages/about.html">ABOUT</a>
-                <a href="/Frontend/pages/blog.html">BLOG</a>
-                <a href="/Frontend/pages/contact.html">CONTACT</a>
+                <a href="../index.html">HOME</a>
+                <a href="../pages/products.html">PRODUCTS</a>
+                <a href="../pages/categories.html">CATEGORIES</a>
+                <a href="../pages/about.html">ABOUT</a>
+                <a href="../pages/blog.html">BLOG</a>
+                <a href="../pages/contact.html">CONTACT</a>
         </div>
     </div>
 
@@ -92,7 +92,7 @@
                 <div class="card-content">
                     <h3>Footwear</h3>
                     <p>Luxury shoes for every occasion</p>
-                    <a href="/Frontend/pages/products.html">Shop Now &rarr;</a>
+                    <a href="../pages/products.html">Shop Now &rarr;</a>
                 </div>
             </div>
 
@@ -103,7 +103,7 @@
                 <div class="card-content">
                     <h3>Bags</h3>
                     <p>Designer handbags and luxury leather goods</p>
-                    <a href="/Frontend/pages/products.html">Shop Now &rarr;</a>
+                    <a href="../pages/products.html">Shop Now &rarr;</a>
                 </div>
             </div>
 
@@ -114,7 +114,7 @@
                 <div class="card-content">
                     <h3>Men's Fashion</h3>
                     <p>Sophisticated menswear collection</p>
-                    <a href="/Frontend/pages/products.html">Shop Now &rarr;</a>
+                    <a href="../pages/products.html">Shop Now &rarr;</a>
                 </div>
             </div>
 
@@ -125,7 +125,7 @@
                 <div class="card-content">
                     <h3>Women's Fashion</h3>
                     <p>Elegant pieces for the modern woman</p>
-                    <a href="/Frontend/pages/products.html">Shop Now &rarr;</a>
+                    <a href="../pages/products.html">Shop Now &rarr;</a>
                 </div>
             </div>
 
@@ -136,7 +136,7 @@
                 <div class="card-content">
                     <h3>Accessories</h3>
                     <p>Premium accessories to complete your look</p>
-                    <a href="/Frontend/pages/products.html">Shop Now &rarr;</a>
+                    <a href="../pages/products.html">Shop Now &rarr;</a>
                 </div>
             </div>
 
@@ -147,7 +147,7 @@
                 <div class="card-content">
                     <h3>Jewelry</h3>
                     <p>Premium accessories to complete your look</p>
-                    <a href="/Frontend/pages/products.html">Shop Now &rarr;</a>
+                    <a href="../pages/products.html">Shop Now &rarr;</a>
                 </div>
             </div>
         </div>
@@ -160,7 +160,7 @@
             Our collection is constantly evolving. Contact us to inquire 
             about specific items or to learn about upcoming releases.
         </p>
-        <button class="contact-button" onclick="handleContactClick()"><a href="/Frontend/pages/contact.html">Contact Us</a></button>
+        <button class="contact-button" onclick="handleContactClick()"><a href="../pages/contact.html">Contact Us</a></button>
     </section>
 
      <!-- footer section tag -->
@@ -170,7 +170,7 @@
             <!-- column number 1 logo and description -->
             <div class="footer-column footer-logo-col">
                 <div class="footer-logo">
-                    <a href="/Frontend/index.html" class="LOGO5">LU<span class="LOGO6">XE</span><span class="LOGO7">.</span></a>
+                    <a href="../index.html" class="LOGO5">LU<span class="LOGO6">XE</span><span class="LOGO7">.</span></a>
                 </div>
                 <p class="footer-description">
                     Curated fashion for the modern wardrobe. Find quality pieces 
@@ -181,22 +181,22 @@
             <!-- column number two shop links -->
             <div class="footer-column footer-links">
                 <h4>Shop</h4>
-                <a href="/Frontend/pages/products.html">All Products</a>
-                <a href="/Frontend/pages/categories.html">Categories</a>
+                <a href="../pages/products.html">All Products</a>
+                <a href="../pages/categories.html">Categories</a>
             </div>
 
             <!-- column number three account links -->
             <div class="footer-column footer-links">
                 <h4>Account</h4>
-                <a href="/Frontend/pages/orders.html">My Orders</a>
-                <a href="/Frontend/pages/cart.html">Shopping Cart</a>
+                <a href="../pages/orders.html">My Orders</a>
+                <a href="../pages/cart.html">Shopping Cart</a>
             </div>
 
             <!-- column number four support links -->
             <div class="footer-column footer-links">
                 <h4>Support</h4>
                 <a href="#">My Account</a>
-                <a href="/Frontend/pages/contact.html">Contact Us</a>
+                <a href="../pages/contact.html">Contact Us</a>
                 <a href="#">FAQ</a>
             </div>
 
@@ -217,7 +217,7 @@
         </div>
      </footer>
 
-    <script src="/Frontend/js/script.js"></script>
-    <script src="/Frontend/js/script2.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/script2.js"></script>
 </body>
 </html>
